# ap

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DECISIONS.md  LICENSE  MASTER_PLAN.md  PHILOSOPHY.md  README.md  pyproject.toml
.claude/plans/: character-c3-philosophy-bureaucrat.md  character-c4-columbo.md  character-v2-roadmap.md  dossier-m2-slot-extractors.md  dossier-m3-scoring.md  dossier-m4-persistent-state.md  dossier-m5-denial-strategies.md  dossier-m6-dossier-aware-pivot.md  dossier-m7-reports-celebrations.md  dossier-m8-cleanup-novelty.md  dossier-m9-crowdsourced-comparison.md  dossier-reframe-v2-roadmap.md  error-routing-2026-06-11.md  workspace-db-2026-06-11.md
.claude/research/DeepResearch_AdversaryPursuit_2026-04-05/: comparison-matrix.md  comparison_matrix.json  gemini.md  meta.json  raw_results.json  report.md
.github/workflows/: ci.yml  regen-decisions.yml  release.yml
docs/: QA_V0.4.9.md  WEB_SUPPLY_CHAIN.md
docs/plans/: V0.4.2_QA_UX_PLAN.md
reckonings/: 2026-04-06-reckoning.md  2026-04-29-reckoning.md  2026-05-26-reckoning.md  2026-06-09-reckoning.md  2026-06-29-reckoning.md  UX-team.md  context-2026-06-15-phase-17p-complete.md
scripts/: regen_decisions.py  smoke_test.py
src/adversary_pursuit/: __init__.py  __main__.py
src/adversary_pursuit/agent/: __init__.py  banner.py  battery.py  battery_registry.py  chat.py  enrichment_briefings.py  error_handler.py  provider_setup.py  repl_input.py  repl_verbs.py  runner.py  tools.py  yield_commands.py
src/adversary_pursuit/core/: __init__.py  config.py  console.py  dossier_pivot.py  dossier_report.py  error_interpreter.py  event_bus.py  evidence_detail.py  graph.py  investigation.py  ioc_types.py  module_credentials.py  music.py  pivot_policy.py  plugin_mgr.py  report.py  streak.py  workspace.py
src/adversary_pursuit/data/: __init__.py  pivot_allowlist_top1k.txt
src/adversary_pursuit/dossier/: __init__.py  comparison.py  export.py  import_.py  novelty.py  (+7 more)
tests/: conftest.py  test_abuseipdb.py  test_agent_tools.py  test_badges.py  test_banner.py  test_banner_theme_unified.py  test_battery_coverage.py  test_battery_dispatch.py  test_celebration_retirement.py  test_celebrations.py  test_censys.py  test_challenges.py  test_character_neuromancer.py  test_character_phrases.py  test_character_refresh_cadence.py  test_character_v2.py  test_chat_dossier_metacommand.py  test_chat_report_metacommand.py  test_chat_workspace_parity.py  test_classic_style_regression.py  test_cmd2_rich_spike.py  test_config.py  test_console.py  test_console_repl_visibility.py  test_crtsh.py  test_deckard_hal9000_voice.py  test_dossier_badges.py  test_dossier_celebrations.py  test_dossier_comparison.py  test_dossier_export.py  test_dossier_get_state_tool.py  test_dossier_import.py  test_dossier_library.py  test_dossier_m9_tools.py  test_dossier_novelty.py  test_dossier_panel.py  test_dossier_persistence_integration.py  test_dossier_pivot.py  test_dossier_pivot_eventbus.py  test_dossier_pivot_integration.py  (+72 more)
tests/fixtures/: v1_classic_report.md
tmp/: c3-evaluation.json  c3-scope.json  c4-evaluation.json  c4-scope.json  error-routing-evaluation.json  error-routing-scope.json  hygiene-scope.json  m5-scope.json  m6-scope.json  m7-scope.json  m8-scope.json  m9-evaluation.json  m9-scope.json  workspace-db-evaluation.json  workspace-db-scope.json
tmp/evidence-60-auto-pivot-policy/: decision_log_15_cdn_domains.json  full_suite.txt  pytest_pivot_policy.txt  quota_bomb_before_after.txt
tmp/evidence-m9-crowdsourced-comparison/: README.md
web/: next.config.ts  package-lock.json  package.json
web/app/: layout.tsx  page.tsx  pivotglass.css
(+42 files in other folders)
