[project]
name = "adversary-pursuit"
version = "0.1.0"
requires-python = ">=3.12"
description = "Gamified framework for hunting, pivoting, and discovery of adversary infrastructure, indicators, and TTPs"
dependencies = [
    "cmd2>=2.5",
    "rich>=13.0",
    "sqlalchemy>=2.0",
    "stix2>=3.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "tomli_w>=1.0",
]

[project.scripts]
ap = "adversary_pursuit.__main__:main"

[project.entry-points."adversary_pursuit.modules"]
whois_lookup = "adversary_pursuit.modules.osint.whois_lookup:WhoisLookup"
dns_resolve = "adversary_pursuit.modules.osint.dns_resolve:DnsResolve"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adversary_pursuit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]
