[project]
name = "adversary-pursuit"
version = "0.1.0"
requires-python = ">=3.12"
description = "Gamified framework for hunting, pivoting, and discovery of adversary infrastructure, indicators, and TTPs"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "John Jarocki", email = "john@jarocki.me" },
]
keywords = ["threat-intelligence", "osint", "cti", "gamification", "adversary-pursuit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Internet",
]

dependencies = [
    "cmd2>=2.5",
    "rich>=13.0",
    "sqlalchemy>=2.0",
    "stix2>=3.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "tomli_w>=1.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/jarocki/ap"
Repository = "https://github.com/jarocki/ap"
"Bug Tracker" = "https://github.com/jarocki/ap/issues"

[project.scripts]
ap = "adversary_pursuit.__main__:main"

[project.entry-points."adversary_pursuit.modules"]
whois_lookup = "adversary_pursuit.modules.osint.whois_lookup:WhoisLookup"
dns_resolve = "adversary_pursuit.modules.osint.dns_resolve:DnsResolve"
abuseipdb = "adversary_pursuit.modules.osint.abuseipdb:AbuseIPDB"
urlscan = "adversary_pursuit.modules.osint.urlscan:URLScan"
hibp = "adversary_pursuit.modules.osint.hibp:HIBP"
otx = "adversary_pursuit.modules.cti.otx:AlienVaultOTX"
shodan_ip = "adversary_pursuit.modules.osint.shodan_ip:ShodanIP"
censys_host = "adversary_pursuit.modules.osint.censys_host:CensysHost"
virustotal = "adversary_pursuit.modules.cti.virustotal:VirusTotal"
passivetotal = "adversary_pursuit.modules.cti.passivetotal:PassiveTotal"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adversary_pursuit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]
agent = ["litellm>=1.0", "prompt-toolkit>=3.0"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
